<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
      <groupId>com.saic.uicds.core.em</groupId>
      <artifactId>com.saic.uicds.core.em</artifactId>
      <version>1.0.0</version>
  </parent>
  <artifactId>com.saic.uicds.core.em.have</artifactId>
  <packaging>jar</packaging>
  <name>com.saic.uicds.core.em.have</name>
  <version>1.0.0</version>

  <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymock</artifactId>
            <version>2.4</version>
        </dependency>
        <dependency>
           <groupId>com.saic.uicds.core.em</groupId>
           <artifactId>com.saic.uicds.core.em.xmlbeans-have</artifactId>
           <version>${xmlbeans-have.version}</version>
        </dependency>
        <dependency>
            <groupId>${infrastructure.groupId}</groupId>
            <artifactId>com.saic.uicds.core.infrastructure.testing.util</artifactId>
            <version>${infrastructure.version}</version>
        </dependency>
        <dependency>
            <groupId>${pom.groupId}</groupId>
            <artifactId>com.saic.uicds.core.em.services</artifactId>
            <version>${em.version}</version>
        </dependency>
        <dependency>
            <groupId>${infrastructure.groupId}</groupId>
            <artifactId>com.saic.uicds.core.infrastructure.services</artifactId>
            <version>${infrastructure.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-orm</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>1.1.104</version>
            <scope>test</scope>
        </dependency>
  </dependencies>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${javadoc.plugin.version}</version>
                <configuration>
                    <aggregate>true</aggregate>
                    <excludePackageNames>com.saic.uicds.core.em.controller:com.saic.uicds.core.em.dao:com.saic.uicds.core.em.exceptions:com.saic.uicds.core.em.messages:com.saic.uicds.core.em.model:com.saic.uicds.core.em.service:com.saic.uicds.core.em.util</excludePackageNames>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>2.6.1</version>
            </plugin>
        </plugins>
    </reporting>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.4.2</version>
                <configuration>
                    <!-- forkMode and MaxPermSize are set to overcome OutOfMemory exceptions -->
                    <forkMode>once</forkMode>
                    <argLine>-XX:MaxPermSize=256M</argLine>
                </configuration>
            </plugin>
            <!-- Exclude any xslt because they should be added to the deployment directory in WEB-INF/classes/xslt -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.1</version>
                <configuration>
                  <excludes>
                    <exclude>**/xslt/*</exclude>
                  </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
